--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url('/assets/background.webp');
-  background-size: cover; 
-  background-repeat: no-repeat; 
-  background-attachment: fixed; 
-  background-position: center; 
-  
+  background-image: url("/assets/background.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
-
 
 .main-content {
   padding: 20px;
@@ -17,16 +15,15 @@ body {
   text-align: center;
 }
 
-
 .button-container {
   display: flex;
   flex-direction: column;
-  align-items: center; 
-  gap: -2000px; 
+  align-items: center;
 }
 
-.projects-button, .about-me-button {
-  display: block; 
+.projects-button,
+.about-me-button {
+  display: block;
   margin: 5px 0;
 }
 
@@ -41,23 +38,11 @@ body {
   background: transparent;
   border: 1px solid black;
   cursor: pointer;
-  margin-top: 200px; 
   margin-right: 50px;
 }
 
 .projects-button:hover {
   background-color: #555;
-}
-@media (max-width: 768px) {
-  .main-content {
-    justify-content: flex-start; 
-    padding-top: 50px; 
-  }
-
-  .projects-button {
-    font-size: 1.2rem; 
-    padding: 8px 15px; 
-  }
 }
 
 .about-me-button {
@@ -77,17 +62,6 @@ body {
 .about-me-button:hover {
   background-color: #555;
 }
-@media (max-width: 768px) {
-  .main-content {
-    justify-content: flex-start; 
-    padding-top: 50px; 
-  }
-
-  .about-me-button {
-    font-size: 1.2rem; 
-    padding: 8px 15px; 
-  }
-}
 
 .project-gallery {
   display: flex;
@@ -104,7 +78,6 @@ body {
   padding: 20px;
   border-radius: 10px;
   background-color: #b9b6a5a9;
-  
 }
 
 .project-card img {
@@ -134,10 +107,9 @@ body {
   width: 100%;
   padding: 10px 20px;
   display: flex;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   align-items: center;
-  z-index: 1000; 
-  
+  z-index: 1000;
 }
 .header h1 {
   text-decoration: none;
@@ -147,7 +119,9 @@ body {
   -webkit-text-stroke: 2px black;
   margin-bottom: 20px;
   margin-right: 100px;
-  
+}
+.header h2 {
+  padding-left: 330px;
 }
 .header-center {
   justify-content: center;
@@ -158,17 +132,17 @@ body {
   padding-left: 150px;
 }
 .project-content h2 {
-  padding-left: 50px;
+  padding-left: 330px;
 }
 .home-link {
-  text-decoration: none; 
-  color: transparent; 
-  -webkit-text-stroke: 2px black; 
-  cursor: pointer; 
+  text-decoration: none;
+  color: transparent;
+  -webkit-text-stroke: 2px black;
+  cursor: pointer;
 }
 .home-link:hover {
-  color: transparent; 
-  -webkit-text-stroke: 2px #555; 
+  color: transparent;
+  -webkit-text-stroke: 2px #555;
 }
 .header-icons {
   display: absolute;
@@ -179,32 +153,16 @@ body {
   transform: translateY(40%);
 }
 .icon {
-  width: 30px; 
+  width: 30px;
   height: 30px;
   cursor: pointer;
   margin-right: 15px;
 }
 
 .icon:hover {
-  transform: scale(1.1); 
+  transform: scale(1.1);
 }
-@media (max-width: 768px) {
-  .header {
-    flex-direction: column; 
-    justify-content: center;
-  }
 
-  .header-icons {
-    margin-right: 0; 
-    margin-top: 10px; 
-    gap: 20px; 
-  }
-
-  .header h1 {
-    font-size: 3rem; 
-    margin-bottom: 15px; 
-  }
-}
 .project-card iframe {
   width: 100%;
   height: auto;
@@ -216,4 +174,70 @@ body {
 }
 ul {
   list-style-type: none;
+}
+
+@media (max-width: 844px) {
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+  }
+  .header h2{
+    
+    padding-top: 30px;
+    margin-right: 280px;
+  }
+
+  .projects-button,
+  .about-me-button {
+    font-size: 1.5rem;
+    padding: 8px 15px;
+    margin: 10px 0;
+  }
+
+  .project-gallery {
+    margin-top: 240px;
+    gap: 20px;
+  }
+
+  .project-card {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
+    padding: 10px; 
+    margin-top: 20px;
+  }
+
+  .header h1 {
+    font-size: 2.5rem; 
+    margin: 0; 
+    padding: 0 10px; 
+    text-align: center; 
+  }
+
+  .header-icons {
+    display: flex;
+    justify-content: center; 
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .icon {
+    width: 25px; 
+    height: 25px;
+  }
+}
+
+.button-container {
+  gap: 20px;
+  margin: 20px 0;
+  margin-top: 200px;
 }
