--- a/src/styles.css
+++ b/src/styles.css
@@ -302,7 +302,6 @@ ul {
     margin: 0 auto;
     text-align: center;
   }
-  }
   .header {
     flex-direction: column;
     justify-content: center;
@@ -310,6 +309,7 @@ ul {
     text-align: center;
     padding: 10px; 
     margin-top: 20px;
+    letter-spacing: .1rem
   }
 
   .header h1 {
@@ -330,6 +330,14 @@ ul {
     width: 25px; 
     height: 25px;
   }
+  .project-card iframe {
+    width: 100%;
+    height: auto;
+    border: none;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    min-width: 0; 
+    max-width: 100%; 
+  }
 
-
-
+}
