--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 }
 .repo-links {
   text-decoration: none;
+  text-align: center;
 }
 .repo-page-icon {
   max-width: 40px;
@@ -27,6 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
 }
 
 .projects-button {
@@ -36,15 +38,31 @@ body {
   text-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
   -webkit-text-stroke: 1px black;
   margin-bottom: 20px;
-  border: #000000;
-  background: transparent;
   border: 1px solid black;
+  background: transparent;
   cursor: pointer;
   margin-right: 50px;
+  padding: 10px 20px; 
+  transition: all 0.3s ease-in-out;
+  position: relative;
 }
 
-.projects-button:hover {
-  background-color: #555;
+.projects-button:hover::before {
+  content: "→";  
+  position: absolute;
+  left: -20px;  
+  font-size: 2rem;
+  color: black;
+  transition: left 0.2s ease-in-out;
+}
+
+.projects-button:hover::after {
+  content: "←";  
+  position: absolute;
+  right: -20px;  
+  font-size: 2rem;
+  color: black;
+  transition: right 0.2s ease-in-out;
 }
 
 .about-me-button {
@@ -54,17 +72,32 @@ body {
   text-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
   -webkit-text-stroke: 1px black;
   margin-bottom: 20px;
-  border: #000000;
-  background: transparent;
   border: 1px solid black;
+  background: transparent;
   cursor: pointer;
   margin-right: 50px;
+  padding: 10px 20px; 
+  transition: all 0.3s ease-in-out;
+  position: relative;
 }
 
-.about-me-button:hover {
-  background-color: #555;
+.about-me-button:hover::before {
+  content: "→";  
+  position: absolute;
+  left: -20px;  
+  font-size: 2rem;
+  color: black;
+  transition: left 0.2s ease-in-out;
 }
 
+.about-me-button:hover::after {
+  content: "←";  
+  position: absolute;
+  right: -20px;  
+  font-size: 2rem;
+  color: black;
+  transition: right 0.2s ease-in-out;
+}
 .project-gallery {
   display: flex;
   flex-direction: column;
